--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reseptisivusto",
   "version": "0.1.0",
-  "homepage": "https://roosavilla.github.io/roosanreseptit",
+  "homepage": "https://roosavilla.github.io/WMKprojekti",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
